index.css
body {
  width: auto;
  height: 960px;
  background-color: #F4D04E;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.card {
  display: flex;
  flex-direction: column;
  flex-shrink: 0;
  background-color: white;
  border-radius: 20px;
  width: 21rem;
  height: 29.625rem;
  padding: 1.5rem;
  border: solid 1px black;
  gap: 1.5rem;
  box-shadow: 8px 8px 0 0 #000;
}

.card img {
  border-radius: 10px;
}

.text {
  display: flex;
  flex-direction: column;
  margin:0;
  
}

.text h2 {
  margin:0;
  padding: 0.25rem 0.75rem;
  background-color: #F4D04E;
  color: #111;
  width: 3.625rem;
  height: 1.3125rem;
  border-radius: 0.25rem;
  font-family: Figtree;
  font-size: 0.875rem;
  font-style: normal;
  font-weight: 800;
  line-height: 150%;
}

.text p {
  margin: 0.75rem 0;
  color: #111;
  font-family: Figtree;
  font-size: 0.875rem;
  font-style: normal;
  font-weight: 500;
  line-height: 150%;
}

.text h1 {
  margin: 0;
  color: #111;
  font-family: Figtree;
  font-size: 1.5rem;
  font-style: normal;
  font-weight: 800;
  line-height: 150%;
}

.text h1:hover {
  color: #F4D04E;
  cursor: pointer;
}

.text #description {
  color: #6B6B6B;
  font-size: 1rem;
  font-weight: 500;
  font-family: Figtree;
  line-height:150%;
  font-style: normal;
}

.user-info {
  display: flex;
  align-items: center;
  width: auto;
  height: 2rem;

}

.user-info img {
  width: 2rem;
  height: 2rem;
}

.user-info h2 {
  background-color: transparent;
  width: auto;
  padding: 0 0 0 0.75rem;
  color: #111;
  font-family: Figtree;
  font-size: 0.875rem;
  font-style: normal;
  font-weight: 800;
  line-height: 150%;
}

.attribution { 
  font-size: 11px; 
  text-align: center; 
  margin-top: 10rem;
}
    
.attribution a {
   color: hsl(228, 45%, 44%); 
  }

